[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "rpycdec"
authors = [{ name = "cnfatal", email = "cnfatal@gmail.com" }]
description = "A tool to decrypt .rpyc files"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Utilities",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["version"]
dependencies = []

[project.optional-dependencies]
release = ["twine"]
sign = ["ecdsa"]

[project.urls]
"Homepage" = "https://github.com/cnfatal/rpycdec"
"Bug Tracker" = "https://github.com/cnfatal/rpycdec/issues"

[project.scripts]
rpycdec = "rpycdec:main"

[tool.hatch.build.targets.sdist]
exclude = ["/.github", "/docs"]

[tool.hatch.build.targets.wheel]
packages = ["src/rpycdec", "src/renpy", "src/store"]

[tool.hatch.version]
source = "vcs"
